input field design change

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,7 @@
   --warning-light: #FFD666;
   --warning-dark: #B76E00;
   --error: #FF5630;
-  --error-light: #FFAC82;
+  --error-light: #FFCEC3;
   --error-dark: #B71D18;
   --info: #00B8D9;
   --info-light: #61F3F3;
