--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -58,7 +58,8 @@
 }
 
 input {
-  @apply border rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-orange-500;
+  /* @apply border rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-orange-500; */
+  @apply border rounded-md px-3 py-2 focus:outline-none;
 }
 
 @layer utilities {
